--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".About" />
-
+        <activity android:name=".HeatMap"/>
         <service
             android:name=".APIService"
             android:enabled="true"
