added decimal formatter

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="india.coronavirus.fight">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <!--    <uses-permission android:name="android.permission.VIBRATE" />-->
     <!--    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />-->
 
