--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         </activity>
         <activity android:name=".About" />
         <activity android:name=".HeatMap"/>
+        <activity android:name=".utilities.LoadPDF"/>
         <service
             android:name=".APIService"
             android:enabled="true"
